--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -337,7 +337,12 @@
     "            continue\n",
     "\n",
     "        __graph = get_graph(graph=graph, graph_type=graph_direction)\n",
-    "        __centrality = algorithm.func(__graph, **algorithm.args)\n",
+    "\n",
+    "        try:\n",
+    "            __centrality = algorithm.func(__graph, **algorithm.args)\n",
+    "        except Exception as e:\n",
+    "            if verbose: print_error(f\"Error while running '{algorithm_name}': {e}\")\n",
+    "            continue\n",
     "\n",
     "        # return the degree as the weight\n",
     "        if isinstance(__centrality, list):\n",
@@ -353,27 +358,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 294,
    "id": "2911eb47",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ log ]: Running 'Degree Centrality' (1/10)\n",
+      "[ log ]: Option: '{'direction': 'both'}'\n",
+      "[ log ]: Result: '{'C47E12.4': 0.020833333333333332, 'Y111B2A.22': 0.08333333333333333, 'F47G6.1': 0.08333333333333333, 'C05D11.10': 0.020833333333333332, 'F57F4.1': 0.16666666666666666, 'T07D3.9': 0.16666666666666666, 'ZK669.4': 0.020833333333333332, 'F09E5.5': 0.020833333333333332, 'F09E10.8': 0.08333333333333333, 'C09G12.9': 0.22916666666666666, 'B0379.4': 0.020833333333333332, 'CD4.4': 0.10416666666666666, 'F08B12.1': 0.020833333333333332, 'F13H10.4': 0.020833333333333332, 'M05B5.4': 0.020833333333333332, 'R13A5.12': 0.041666666666666664, 'R31.1': 0.041666666666666664, 'Y76B12C.2': 0.020833333333333332, 'Y87G2A.10': 0.041666666666666664, 'Y54G11A.3': 0.041666666666666664, 'C43H8.1': 0.020833333333333332, 'F10E7.7': 0.10416666666666666, 'T26A5.9': 0.020833333333333332, 'F22B5.1': 0.08333333333333333, 'Y64G10A.7': 0.020833333333333332, 'C11E4.6': 0.08333333333333333, 'K09E9.2': 0.020833333333333332, 'R12E2.12': 0.020833333333333332, 'K03E6.6': 0.041666666666666664, 'C07G1.4': 0.041666666666666664, 'Y71F9AL.16': 0.0625, 'R106.2': 0.020833333333333332, 'Y71F9AM.4': 0.020833333333333332, 'C04F12.8': 0.020833333333333332, 'F21D5.6': 0.0625, 'K04G2.6': 0.041666666666666664, 'M153.1': 0.041666666666666664, 'R10D12.13': 0.041666666666666664, 'Y71H2AM.24': 0.041666666666666664, 'Y87G2A.9': 0.041666666666666664, 'Y38F1A.5': 0.020833333333333332, 'F56H11.1': 0.020833333333333332, 'F40F8.10': 0.020833333333333332, 'T05H10.6': 0.020833333333333332, 'F33A8.1': 0.020833333333333332, 'C25D7.8': 0.041666666666666664, 'C40H1.6': 0.020833333333333332, 'Y53C12B.2': 0.020833333333333332, 'T28A8.7': 0.020833333333333332}'\n",
+      "[ log ]: ==================================================\n",
+      "[ log ]: Running 'In Degree Centrality' (2/10)\n",
+      "[ log ]: Option: '{'direction': 'directed'}'\n",
+      "[ log ]: Result: '{'C47E12.4': 0.0, 'Y111B2A.22': 0.0625, 'F56H11.1': 0.020833333333333332, 'F47G6.1': 0.0, 'C05D11.10': 0.020833333333333332, 'F57F4.1': 0.041666666666666664, 'T07D3.9': 0.125, 'ZK669.4': 0.020833333333333332, 'CD4.4': 0.041666666666666664, 'K04G2.6': 0.020833333333333332, 'M153.1': 0.020833333333333332, 'R10D12.13': 0.041666666666666664, 'Y71H2AM.24': 0.041666666666666664, 'F09E5.5': 0.0, 'F09E10.8': 0.0625, 'Y53C12B.2': 0.020833333333333332, 'C09G12.9': 0.0, 'B0379.4': 0.020833333333333332, 'F08B12.1': 0.020833333333333332, 'F13H10.4': 0.020833333333333332, 'M05B5.4': 0.020833333333333332, 'R13A5.12': 0.041666666666666664, 'R31.1': 0.020833333333333332, 'Y76B12C.2': 0.020833333333333332, 'Y87G2A.10': 0.020833333333333332, 'F10E7.7': 0.0625, 'Y87G2A.9': 0.020833333333333332, 'T28A8.7': 0.020833333333333332, 'R12E2.12': 0.020833333333333332, 'Y54G11A.3': 0.0, 'C43H8.1': 0.0, 'C11E4.6': 0.08333333333333333, 'F22B5.1': 0.08333333333333333, 'T26A5.9': 0.0, 'Y64G10A.7': 0.0, 'K09E9.2': 0.0, 'K03E6.6': 0.0, 'C07G1.4': 0.020833333333333332, 'Y71F9AL.16': 0.020833333333333332, 'Y71F9AM.4': 0.020833333333333332, 'R106.2': 0.0, 'C04F12.8': 0.0, 'F21D5.6': 0.020833333333333332, 'C25D7.8': 0.041666666666666664, 'C40H1.6': 0.020833333333333332, 'Y38F1A.5': 0.0, 'F40F8.10': 0.0, 'T05H10.6': 0.0, 'F33A8.1': 0.0}'\n",
+      "[ log ]: ==================================================\n",
+      "[ log ]: Running 'Out Degree Centrality' (3/10)\n",
+      "[ log ]: Option: '{'direction': 'directed'}'\n",
+      "[ log ]: Result: '{'C47E12.4': 0.020833333333333332, 'Y111B2A.22': 0.020833333333333332, 'F56H11.1': 0.0, 'F47G6.1': 0.08333333333333333, 'C05D11.10': 0.0, 'F57F4.1': 0.125, 'T07D3.9': 0.041666666666666664, 'ZK669.4': 0.0, 'CD4.4': 0.0625, 'K04G2.6': 0.020833333333333332, 'M153.1': 0.020833333333333332, 'R10D12.13': 0.0, 'Y71H2AM.24': 0.0, 'F09E5.5': 0.020833333333333332, 'F09E10.8': 0.020833333333333332, 'Y53C12B.2': 0.0, 'C09G12.9': 0.22916666666666666, 'B0379.4': 0.0, 'F08B12.1': 0.0, 'F13H10.4': 0.0, 'M05B5.4': 0.0, 'R13A5.12': 0.0, 'R31.1': 0.020833333333333332, 'Y76B12C.2': 0.0, 'Y87G2A.10': 0.020833333333333332, 'F10E7.7': 0.041666666666666664, 'Y87G2A.9': 0.020833333333333332, 'T28A8.7': 0.0, 'R12E2.12': 0.0, 'Y54G11A.3': 0.041666666666666664, 'C43H8.1': 0.020833333333333332, 'C11E4.6': 0.0, 'F22B5.1': 0.0, 'T26A5.9': 0.020833333333333332, 'Y64G10A.7': 0.020833333333333332, 'K09E9.2': 0.020833333333333332, 'K03E6.6': 0.041666666666666664, 'C07G1.4': 0.020833333333333332, 'Y71F9AL.16': 0.041666666666666664, 'Y71F9AM.4': 0.0, 'R106.2': 0.020833333333333332, 'C04F12.8': 0.020833333333333332, 'F21D5.6': 0.041666666666666664, 'C25D7.8': 0.0, 'C40H1.6': 0.0, 'Y38F1A.5': 0.020833333333333332, 'F40F8.10': 0.020833333333333332, 'T05H10.6': 0.020833333333333332, 'F33A8.1': 0.020833333333333332}'\n",
+      "[ log ]: ==================================================\n",
+      "[ log ]: Running 'Eigenvector Centrality' (4/10)\n",
+      "[ log ]: Option: '{'direction': 'both'}'\n"
+     ]
+    },
+    {
      "ename": "PowerIterationFailedConvergence",
-     "evalue": "(PowerIterationFailedConvergence(...), 'power iteration failed to converge within 1000 iterations')",
+     "evalue": "(PowerIterationFailedConvergence(...), 'power iteration failed to converge within 100 iterations')",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mPowerIterationFailedConvergence\u001b[0m           Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [292], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m centrality_measures \u001b[38;5;241m=\u001b[39m compute_algorithms(graph\u001b[38;5;241m=\u001b[39mgraph, algorithms\u001b[38;5;241m=\u001b[39malgorithms_to_run, verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "Cell \u001b[0;32mIn [294], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m centrality_measures \u001b[38;5;241m=\u001b[39m compute_algorithms(graph\u001b[38;5;241m=\u001b[39mdi_graph, algorithms\u001b[38;5;241m=\u001b[39malgorithms_to_run, verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
       "Cell \u001b[0;32mIn [291], line 20\u001b[0m, in \u001b[0;36mcompute_algorithms\u001b[0;34m(graph, algorithms, verbose)\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[1;32m     19\u001b[0m __graph \u001b[38;5;241m=\u001b[39m get_graph(graph\u001b[38;5;241m=\u001b[39mgraph, graph_type\u001b[38;5;241m=\u001b[39mgraph_direction)\n\u001b[0;32m---> 20\u001b[0m __centrality \u001b[38;5;241m=\u001b[39m \u001b[43malgorithm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m__graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43malgorithm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# return the degree as the weight\u001b[39;00m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(__centrality, \u001b[38;5;28mlist\u001b[39m):\n",
-      "File \u001b[0;32m<class 'networkx.utils.decorators.argmap'> compilation 25:4\u001b[0m, in \u001b[0;36margmap_katz_centrality_22\u001b[0;34m(G, alpha, beta, max_iter, tol, nstart, normalized, weight)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mcollections\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mgzip\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39minspect\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mitertools\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mre\u001b[39;00m\n",
-      "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/mgma/lib/python3.9/site-packages/networkx/algorithms/centrality/katz.py:193\u001b[0m, in \u001b[0;36mkatz_centrality\u001b[0;34m(G, alpha, beta, max_iter, tol, nstart, normalized, weight)\u001b[0m\n\u001b[1;32m    191\u001b[0m             x[n] \u001b[39m*\u001b[39m\u001b[39m=\u001b[39m s\n\u001b[1;32m    192\u001b[0m         \u001b[39mreturn\u001b[39;00m x\n\u001b[0;32m--> 193\u001b[0m \u001b[39mraise\u001b[39;00m nx\u001b[39m.\u001b[39mPowerIterationFailedConvergence(max_iter)\n",
-      "\u001b[0;31mPowerIterationFailedConvergence\u001b[0m: (PowerIterationFailedConvergence(...), 'power iteration failed to converge within 1000 iterations')"
+      "File \u001b[0;32m<class 'networkx.utils.decorators.argmap'> compilation 21:4\u001b[0m, in \u001b[0;36margmap_eigenvector_centrality_18\u001b[0;34m(G, max_iter, tol, nstart, weight)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mcollections\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mgzip\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39minspect\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mitertools\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mre\u001b[39;00m\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/mgma/lib/python3.9/site-packages/networkx/algorithms/centrality/eigenvector.py:137\u001b[0m, in \u001b[0;36meigenvector_centrality\u001b[0;34m(G, max_iter, tol, nstart, weight)\u001b[0m\n\u001b[1;32m    135\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39msum\u001b[39m(\u001b[39mabs\u001b[39m(x[n] \u001b[39m-\u001b[39m xlast[n]) \u001b[39mfor\u001b[39;00m n \u001b[39min\u001b[39;00m x) \u001b[39m<\u001b[39m nnodes \u001b[39m*\u001b[39m tol:\n\u001b[1;32m    136\u001b[0m         \u001b[39mreturn\u001b[39;00m x\n\u001b[0;32m--> 137\u001b[0m \u001b[39mraise\u001b[39;00m nx\u001b[39m.\u001b[39mPowerIterationFailedConvergence(max_iter)\n",
+      "\u001b[0;31mPowerIterationFailedConvergence\u001b[0m: (PowerIterationFailedConvergence(...), 'power iteration failed to converge within 100 iterations')"
      ]
     }
    ],
    "source": [
-    "centrality_measures = compute_algorithms(graph=graph, algorithms=algorithms_to_run, verbose=True)"
+    "centrality_measures = compute_algorithms(graph=di_graph, algorithms=algorithms_to_run, verbose=True)"
    ]
   },
   {
