--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -2,37 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "id": "8477c89f-d8b1-48a2-a44e-ad2a4b41ae6e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import networkx as nx\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
+    "import logging as log\n",
+    "from enum import Enum\n",
     "from os.path import join, exists, isfile, isdir, abspath, dirname, basename, realpath\n",
-    "from os import makedirs, listdir, pardir, getcwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "18bae153-12a9-4e0d-bfc1-b210a8c89f76",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#create the graphs\n",
-    "#sampleDraw is created for the subgraphs' visualization\n",
-    "graph_fly=nx.DiGraph()\n",
-    "graph_fly.clear()\n",
-    "graph_sworm=nx.DiGraph()\n",
-    "graph_sworm.clear()\n",
-    "graph_fly_sampleDraw=nx.DiGraph()\n",
-    "graph_fly_sampleDraw.clear()\n",
-    "graph_fly_sampleDraw_connected=nx.DiGraph()\n",
-    "graph_fly_sampleDraw_connected.clear()\n",
-    "graph_sworm_sampleDraw=nx.DiGraph()\n",
-    "graph_sworm_sampleDraw.clear()"
+    "from os import makedirs, listdir, pardir, getcwd\n",
+    "from dataclasses import dataclass, field\n",
+    "from typing import Union\n",
+    "\n",
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = \"all\""
    ]
   },
   {
