--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -31,6 +31,20 @@
    "source": [
     "#import the data\n",
     "#data source: https://www.inetbio.org/wormnet/downloadnetwork.php\n",
+    "\n",
+    "parent_dir = abspath(join(join(getcwd(), pardir), pardir))\n",
+    "data_dir = join(parent_dir, 'data')\n",
+    "data_file = join(data_dir, 'DM-HT.txt')\n",
+    "# data_file = join(data_dir, 'DM-HT_small.txt')\n",
+    "\n",
+    "sample_size = 50\n",
+    "\n",
+    "graph = nx.read_edgelist(data_file, nodetype=str, data=((\"weight\", float),))\n",
+    "graph = sample_graph(graph=graph, sample_size=sample_size, verbose=True, plot=True)\n",
+    "di_graph = undirected_to_directed(graph)\n",
+    "\n",
+    "print(f\"{graph}\")\n",
+    "\n",
     "parent_dir = abspath(join(join(getcwd(), pardir), pardir))\n",
     "data_dir = join(parent_dir, 'data')\n",
     "file_fly = pd.read_csv(join(data_dir, \"DM-HT.txt\"), sep=\"\\t\",header=None)\n",
