--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -24,6 +24,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "id": "f043e89e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def downsample_connected_graph(graph: nx.Graph, largest_cc: set, sample_size: int = 25, verbose: bool = False, plot: bool = False) -> nx.Graph:\n",
+    "    \"\"\"\n",
+    "    Down-samples the graph to only contain \"sample_size\" number of nodes\n",
+    "    \"\"\"\n",
+    "    # pick a random node from the largest connected component\n",
+    "    __node = np.random.choice(list(largest_cc))\n",
+    "    __total_nodes, __graph = 0, nx.Graph()\n",
+    "    \n",
+    "    for i, _ in enumerate(range(1, sample_size)):\n",
+    "        # get the ego graph of the node\n",
+    "        __ego_graph = nx.ego_graph(graph, __node, radius=i)\n",
+    "        __total_nodes = len(__ego_graph)\n",
+    "        if (__total_nodes >= sample_size) and not nx.is_empty(__graph): break\n",
+    "        if verbose: print_log(f\"Node: '{__node}' yields '{__total_nodes}' ego-graph nodes after radius '{i}'\")\n",
+    "        __graph = __ego_graph\n",
+    "    \n",
+    "    if plot: nx.draw(__graph, with_labels=True)\n",
+    "    return __graph\n",
+    "\n",
+    "def make_graph_connected(graph: nx.Graph, sample_size: int = 25, sorted_cc: list = list(), verbose: bool = False, plot: bool = False) -> nx.Graph:\n",
+    "    \"\"\"\n",
+    "    Connect the graph by adding more edges between the nodes of connected components\n",
+    "    \"\"\"\n",
+    "    if sample_size <= 0: raise ValueError(f\"Invalid sample size: {sample_size}\")\n",
+    "    if len(sorted_cc) <= 1: raise ValueError(f\"Invalid connected component list\")\n",
+    "    \n",
+    "    largest_cc = sorted_cc[0]\n",
+    "    __first_node = list(largest_cc)[0]\n",
+    "\n",
+    "    __graph = nx.subgraph(graph, largest_cc).copy()\n",
+    "\n",
+    "    for i, cc in enumerate(sorted_cc[1:]):\n",
+    "        # return if adding another connected component will make the graph bigger than sample size\n",
+    "        if (len(__graph) + len(cc)) > sample_size:\n",
+    "            if verbose: print_log(f\"Graph size: {len(__graph)} + CC({i + 1}): {len(cc)} > Sample Size: {sample_size}\")\n",
+    "            break\n",
+    "        # add new edge to make the graph connected\n",
+    "        if verbose: print_log(f\"Adding edge between '{__first_node}' and '{list(cc)[0]}'\")\n",
+    "        __graph.add_edge(__first_node, list(cc)[0])\n",
+    "\n",
+    "        # add the new connected component to the graph\n",
+    "        if verbose: print_log(f\"Adding {len(cc)} nodes from CC({i + 1}) to the graph\")\n",
+    "        __graph.add_edges_from(nx.subgraph(graph, cc).edges())\n",
+    "\n",
+    "    if plot:\n",
+    "        fig, axes = plt.subplots(nrows=1, ncols=2)\n",
+    "        axes[0].set_title(\"Original Graph\")\n",
+    "        nx.draw(graph, with_labels=True, ax=axes[0])\n",
+    "        axes[1].set_title(\"Final Graph\")\n",
+    "        nx.draw(__graph, with_labels=True, ax=axes[1])\n",
+    "    return __graph\n",
+    "\n",
+    "def sample_graph(graph: Union[nx.Graph, nx.DiGraph], sample_size: int = 25, verbose: bool = False, plot: bool = False) -> Union[nx.Graph, nx.DiGraph]:\n",
+    "    \"\"\"\n",
+    "    Returns a sample graph of the given 'sample_size'\n",
+    "    \"\"\"\n",
+    "    if sample_size <= 0: raise ValueError(f\"Invalid sample size: {sample_size}\")\n",
+    "\n",
+    "    is_directed = nx.is_directed(graph) and isinstance(graph, nx.DiGraph)\n",
+    "    if is_directed: graph = graph.to_undirected()\n",
+    "\n",
+    "    sorted_cc = sorted(nx.connected_components(graph), key=len, reverse=True)\n",
+    "    largest_cc = sorted_cc[0]\n",
+    "\n",
+    "    __graph = nx.Graph()\n",
+    "\n",
+    "    if sample_size > len(largest_cc):\n",
+    "        if verbose: print_error(f\"Sample size {sample_size} is greater than the largest connected component size {len(largest_cc)}\")\n",
+    "        if nx.is_connected(graph):\n",
+    "            if verbose: print_log(f\"Graph is connected\")\n",
+    "            __graph = graph.copy()\n",
+    "        else:\n",
+    "            # make graph bigger by connecting the connected components\n",
+    "            if verbose: print_log(f\"Making graph connected\")\n",
+    "            __graph = make_graph_connected(graph=graph, sample_size=sample_size, sorted_cc=sorted_cc, verbose=verbose, plot=plot)\n",
+    "    else:\n",
+    "        # make graph shorter by keeping 'sample_size' elements only and connecting them\n",
+    "        if verbose: print_log(f\"Downsampling a larger graph\")\n",
+    "        __graph = downsample_connected_graph(graph=graph, largest_cc=largest_cc, sample_size=sample_size, verbose=verbose, plot=plot)\n",
+    "    \n",
+    "    return undirected_to_directed(__graph) if is_directed else __graph"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "3696b752-a9e0-4052-9c9b-73a6382f5701",
    "metadata": {},
