--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -24,6 +24,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "id": "ed4553a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def undirected_to_directed(graph: nx.Graph) -> nx.DiGraph:\n",
+    "    \"\"\"\n",
+    "    Converts an undirected graph to a directed graph\n",
+    "    \"\"\"\n",
+    "    di_graph = nx.DiGraph()\n",
+    "    di_graph.add_edges_from(graph.edges())\n",
+    "    return di_graph\n",
+    "\n",
+    "def get_graph(graph: nx.Graph, graph_type: str) -> Union[nx.Graph, nx.DiGraph]:\n",
+    "    \"\"\"\n",
+    "    Returns the graph based on the graph type\n",
+    "    \"\"\"\n",
+    "    if graph_type == str(GRAPH_TYPE.DIRECTED):\n",
+    "        return undirected_to_directed(graph)\n",
+    "    elif graph_type == str(GRAPH_TYPE.BOTH):\n",
+    "        return graph\n",
+    "    else:\n",
+    "        print_error(f\"Unknown graph type: {graph_type}\")\n",
+    "        return graph\n",
+    "\n",
+    "def convert_to_normal(snake_case: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Converts a snake case string to a normal title string\n",
+    "\n",
+    "    Input:  \"in_degree_centrality\"\n",
+    "    Output: \"In Degree Centrality\"\n",
+    "    \"\"\"\n",
+    "    components = snake_case.split('_')\n",
+    "    return \" \".join(x.title() for x in components)\n",
+    "\n",
+    "def print_log(text: str):\n",
+    "    \"\"\"\n",
+    "    Prints the log\n",
+    "    \"\"\"\n",
+    "    print(f\"[ log ]: {text}\")\n",
+    "    # log.info(f\"[ log ]: {text}\")\n",
+    "\n",
+    "def print_error(text: str):\n",
+    "    \"\"\"\n",
+    "    Prints the error\n",
+    "    \"\"\"\n",
+    "    print(f\"[ error ]: {text}\")\n",
+    "    # log.warn(f\"[ error ]: {text}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "id": "f043e89e",
    "metadata": {},
