--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -9,6 +9,9 @@
     "from os.path import join, exists, isfile, isdir, abspath, dirname, basename, realpath\n",
     "from os import makedirs, listdir, pardir, getcwd\n",
     "\n",
+    "from dataclasses import dataclass, field\n",
+    "from typing import Union\n",
+    "\n",
     "import ipywidgets as widgets\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual, Dropdown, Text, GridBox, VBox, HBox, Accordion, BoundedIntText, Checkbox, Layout, IntProgress, Tab, Image, Button\n",
     "from IPython.display import display, Javascript\n",
