Work in progress

--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -38,7 +38,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#--------------------------------------------------\n",
+    "# Helper classes and enums\n",
+    "#--------------------------------------------------\n",
+    "@dataclass(frozen=False, order=False)\n",
+    "class CentralityAlgorithm:\n",
+    "    \"\"\"\n",
+    "    A data-class to store centrality measures arguments and other options\n",
+    "    \"\"\"\n",
+    "    name: str = field(default=\"\")\n",
+    "    func: object = field(default=print)\n",
+    "    args: dict = field(default_factory=dict)\n",
+    "    options: dict = field(default_factory=dict)\n",
+    "\n",
+    "@dataclass(frozen=False, order=False)\n",
+    "class CentralityAlgorithmOutput:\n",
+    "    \"\"\"\n",
+    "    A data-class to store centrality measures results\n",
+    "    \"\"\"\n",
+    "    name: str = field(default=\"\")\n",
+    "    result: dict = field(default_factory=dict)\n",
+    "    options: dict = field(default_factory=dict)\n",
+    "\n",
+    "class GRAPH_TYPE(str, Enum):\n",
+    "    BOTH = \"both\"\n",
+    "    DIRECTED = \"directed\"\n",
+    "    def __str__(self) -> str:\n",
+    "        return self.value"
+   ]
   }
  ],
  "metadata": {
