--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -65,7 +65,11 @@
     "    BOTH = \"both\"\n",
     "    DIRECTED = \"directed\"\n",
     "    def __str__(self) -> str:\n",
-    "        return self.value"
+    "        return self.value\n",
+    "\n",
+    "#--------------------------------------------------\n",
+    "# Helper functions\n",
+    "#--------------------------------------------------\n"
    ]
   }
  ],
