--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -200,6 +200,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "##### Configurations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
