--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -211,7 +211,7 @@
    "outputs": [],
    "source": [
     "#------------------------------------------------------------\n",
-    "#                        Main Code                           \n",
+    "# Algorithm(s) list                           \n",
     "#------------------------------------------------------------\n",
     "algorithms_to_run = [\n",
     "    CentralityAlgorithm(\"degree_centrality\", nx.degree_centrality, {}, {\"direction\":\"both\"}), \n",
