--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -210,9 +210,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#------------------------------------------------------------\n",
-    "# Algorithm(s) list                           \n",
-    "#------------------------------------------------------------\n",
+    "#----------------------------#\n",
+    "# Algorithm(s) list          #                 \n",
+    "#----------------------------#\n",
     "algorithms_to_run = [\n",
     "    CentralityAlgorithm(\"degree_centrality\", nx.degree_centrality, {}, {\"direction\":\"both\"}), \n",
     "    CentralityAlgorithm(\"in_degree_centrality\", nx.in_degree_centrality, {}, {\"direction\":\"directed\"}), \n",
