--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -227,6 +227,11 @@
     "# total sample size\n",
     "sample_size = 25\n",
     "\n",
+    "# config. dir for input graph\n",
+    "parent_dir = abspath(join(join(getcwd(), pardir), pardir))\n",
+    "data_dir = join(parent_dir, 'data')\n",
+    "data_file = join(data_dir, 'DM-HT.txt')\n",
+    "# data_file = join(data_dir, 'DM-HT_small.txt')\n",
     "\n"
    ]
   }
