--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -232,7 +232,10 @@
     "data_dir = join(parent_dir, 'data')\n",
     "data_file = join(data_dir, 'DM-HT.txt')\n",
     "# data_file = join(data_dir, 'DM-HT_small.txt')\n",
-    "\n"
+    "\n",
+    "graph = nx.read_edgelist(data_file, nodetype=str, data=((\"weight\", float),))\n",
+    "graph = sample_graph(graph=graph, sample_size=sample_size, verbose=True, plot=True)\n",
+    "di_graph = undirected_to_directed(graph)"
    ]
   }
  ],
