--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -206,9 +206,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ log ]: Downsampling a larger graph\n",
+      "[ log ]: Node: 'K12F2.1' yields '1' ego-graph nodes after radius '0'\n",
+      "[ log ]: Node: 'K12F2.1' yields '3' ego-graph nodes after radius '1'\n",
+      "[ log ]: Node: 'K12F2.1' yields '11' ego-graph nodes after radius '2'\n",
+      "[ log ]: Node: 'K12F2.1' yields '18' ego-graph nodes after radius '3'\n",
+      "Graph with 18 nodes and 23 edges\n"
+     ]
+    }
+   ],
    "source": [
     "# list of all the algorithms\n",
     "algorithms_to_run = [\n",
@@ -234,9 +247,18 @@
     "# data_file = join(data_dir, 'DM-HT_small.txt')\n",
     "\n",
     "graph = nx.read_edgelist(data_file, nodetype=str, data=((\"weight\", float),))\n",
-    "graph = sample_graph(graph=graph, sample_size=sample_size, verbose=True, plot=True)\n",
-    "di_graph = undirected_to_directed(graph)"
+    "graph = sample_graph(graph=graph, sample_size=sample_size, verbose=True, plot=False)\n",
+    "di_graph = undirected_to_directed(graph)\n",
+    "\n",
+    "print(f\"{graph}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
