Work in progress

--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,44 @@
     "        if verbose: print_log(f\"Downsampling a larger graph\")\n",
     "        __graph = downsample_connected_graph(graph=graph, largest_cc=largest_cc, sample_size=sample_size, verbose=verbose, plot=plot)\n",
     "    \n",
-    "    return undirected_to_directed(__graph) if is_directed else __graph"
+    "    return undirected_to_directed(__graph) if is_directed else __graph\n",
+    "\n",
+    "def compute_algorithms(graph: nx.Graph, algorithms: list, verbose: bool) -> list:\n",
+    "    \"\"\"\n",
+    "    Computes the centrality measures for the given graph\n",
+    "    \"\"\"\n",
+    "    centrality_measures = list()\n",
+    "    for i, algorithm in enumerate(algorithms):\n",
+    "        algorithm_name = convert_to_normal(algorithm.name)\n",
+    "        graph_direction = algorithm.options[\"direction\"]\n",
+    "\n",
+    "        if verbose:\n",
+    "            print_log(f\"Running '{algorithm_name}' ({i+1}/{len(algorithms)})\")\n",
+    "            print_log(f\"Option: '{algorithm.options}'\")\n",
+    "\n",
+    "        # if graph is not directed or undirected, then skip -> invalid direction option\n",
+    "        if graph_direction != str(GRAPH_TYPE.BOTH) and graph_direction != str(GRAPH_TYPE.DIRECTED):\n",
+    "            if verbose: print_error(f\"Invalid direction: '{graph_direction}'\")\n",
+    "            continue\n",
+    "\n",
+    "        __graph = get_graph(graph=graph, graph_type=graph_direction)\n",
+    "\n",
+    "        try:\n",
+    "            __centrality = algorithm.func(__graph, **algorithm.args)\n",
+    "        except Exception as e:\n",
+    "            if verbose: print_error(f\"Error while running '{algorithm_name}': {e}\")\n",
+    "            continue\n",
+    "\n",
+    "        # return the degree as the weight\n",
+    "        if isinstance(__centrality, list):\n",
+    "            __centrality = {node: __graph.degree(node) for node in __centrality}\n",
+    "\n",
+    "        centrality_measures.append(CentralityAlgorithmOutput(algorithm.name, __centrality, algorithm.options))\n",
+    "\n",
+    "        if verbose:\n",
+    "            print_log(f\"Result: '{__centrality}'\")\n",
+    "            print_log(f\"=\"*50)\n",
+    "    return centrality_measures"
    ]
   },
   {
