--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -291,6 +291,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Compute algorithms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "centrality_measures = compute_algorithms(graph=di_graph, algorithms=algorithms_to_run, verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[CentralityAlgorithmOutput(name='degree_centrality', result={'C26G2.1': 0.058823529411764705, 'F11C3.3': 0.1764705882352941, 'F23F1.8': 0.058823529411764705, 'T22D1.9': 0.23529411764705882, 'K12F2.1': 0.11764705882352941, 'F29G9.5': 0.5294117647058824, 'Y17G7B.10': 0.29411764705882354, 'ZK20.3': 0.058823529411764705, 'F56G4.5': 0.11764705882352941, 'C41C4.8': 0.1764705882352941, 'F43D9.4': 0.11764705882352941, 'H18N23.2': 0.11764705882352941, 'C06A1.1': 0.1764705882352941, 'F58G4.1': 0.11764705882352941, 'R06C7.10': 0.11764705882352941, 'T18D3.4': 0.11764705882352941, 'T20F5.2': 0.058823529411764705, 'Y71H2AM.5': 0.058823529411764705}, options={'direction': 'both'}),\n",
+       " CentralityAlgorithmOutput(name='in_degree_centrality', result={'C26G2.1': 0.0, 'F11C3.3': 0.1764705882352941, 'F23F1.8': 0.0, 'T22D1.9': 0.11764705882352941, 'T20F5.2': 0.058823529411764705, 'Y71H2AM.5': 0.058823529411764705, 'K12F2.1': 0.0, 'F29G9.5': 0.11764705882352941, 'Y17G7B.10': 0.1764705882352941, 'C06A1.1': 0.058823529411764705, 'F56G4.5': 0.11764705882352941, 'F58G4.1': 0.058823529411764705, 'R06C7.10': 0.11764705882352941, 'T18D3.4': 0.058823529411764705, 'ZK20.3': 0.0, 'C41C4.8': 0.0, 'F43D9.4': 0.11764705882352941, 'H18N23.2': 0.11764705882352941}, options={'direction': 'directed'}),\n",
+       " CentralityAlgorithmOutput(name='out_degree_centrality', result={'C26G2.1': 0.058823529411764705, 'F11C3.3': 0.0, 'F23F1.8': 0.058823529411764705, 'T22D1.9': 0.11764705882352941, 'T20F5.2': 0.0, 'Y71H2AM.5': 0.0, 'K12F2.1': 0.11764705882352941, 'F29G9.5': 0.4117647058823529, 'Y17G7B.10': 0.11764705882352941, 'C06A1.1': 0.11764705882352941, 'F56G4.5': 0.0, 'F58G4.1': 0.058823529411764705, 'R06C7.10': 0.0, 'T18D3.4': 0.058823529411764705, 'ZK20.3': 0.058823529411764705, 'C41C4.8': 0.1764705882352941, 'F43D9.4': 0.0, 'H18N23.2': 0.0}, options={'direction': 'directed'}),\n",
+       " CentralityAlgorithmOutput(name='katz_centrality', result={'C26G2.1': 0.20503979789118923, 'F11C3.3': 0.2772958226680443, 'F23F1.8': 0.20503979789118923, 'T22D1.9': 0.25014855342725084, 'K12F2.1': 0.20503979789118923, 'F29G9.5': 0.24604775746942706, 'Y17G7B.10': 0.27147269240793453, 'ZK20.3': 0.20503979789118923, 'F56G4.5': 0.25014855342725084, 'C41C4.8': 0.20503979789118923, 'F43D9.4': 0.24850823504412134, 'H18N23.2': 0.24850823504412134, 'C06A1.1': 0.22964457363813195, 'F58G4.1': 0.22964457363813195, 'R06C7.10': 0.25679184287892537, 'T18D3.4': 0.22964457363813195, 'T20F5.2': 0.2300546532339143, 'Y71H2AM.5': 0.2300546532339143}, options={'direction': 'both'}),\n",
+       " CentralityAlgorithmOutput(name='pagerank', result={'C26G2.1': 0.031760128686619815, 'F11C3.3': 0.11228672738255518, 'F23F1.8': 0.031760128686619815, 'T22D1.9': 0.06534514024022667, 'K12F2.1': 0.031760128686619815, 'F29G9.5': 0.05425734359484061, 'Y17G7B.10': 0.11045173910808934, 'ZK20.3': 0.031760128686619815, 'F56G4.5': 0.06534514024022667, 'C41C4.8': 0.031760128686619815, 'F43D9.4': 0.05705733501904239, 'H18N23.2': 0.05705733501904239, 'C06A1.1': 0.03834848235036172, 'F58G4.1': 0.03834848235036172, 'R06C7.10': 0.08529006949269023, 'T18D3.4': 0.03834848235036172, 'T20F5.2': 0.059531539709551134, 'Y71H2AM.5': 0.059531539709551134}, options={'direction': 'both'}),\n",
+       " CentralityAlgorithmOutput(name='voterank', result={'F29G9.5': 9, 'T22D1.9': 4, 'C41C4.8': 3, 'K12F2.1': 2, 'Y17G7B.10': 5, 'C06A1.1': 3, 'ZK20.3': 1}, options={'direction': 'both'}),\n",
+       " CentralityAlgorithmOutput(name='closeness_centrality', result={'C26G2.1': 0.0, 'F11C3.3': 0.2620320855614973, 'F23F1.8': 0.0, 'T22D1.9': 0.1568627450980392, 'K12F2.1': 0.0, 'F29G9.5': 0.11764705882352941, 'Y17G7B.10': 0.18382352941176472, 'ZK20.3': 0.0, 'F56G4.5': 0.1568627450980392, 'C41C4.8': 0.0, 'F43D9.4': 0.13445378151260504, 'H18N23.2': 0.13445378151260504, 'C06A1.1': 0.10588235294117647, 'F58G4.1': 0.10588235294117647, 'R06C7.10': 0.21176470588235294, 'T18D3.4': 0.10588235294117647, 'T20F5.2': 0.13368983957219252, 'Y71H2AM.5': 0.13368983957219252}, options={'direction': 'both'}),\n",
+       " CentralityAlgorithmOutput(name='harmonic_centrality', result={'C26G2.1': 0, 'F23F1.8': 0, 'K12F2.1': 0, 'ZK20.3': 0, 'C41C4.8': 0, 'F29G9.5': 2.0, 'T22D1.9': 3.0, 'H18N23.2': 2.833333333333333, 'C06A1.1': 2.0, 'T18D3.4': 2.0, 'F58G4.1': 2.0, 'F43D9.4': 2.833333333333333, 'T20F5.2': 2.6666666666666665, 'F56G4.5': 3.0, 'Y17G7B.10': 3.833333333333333, 'R06C7.10': 4.0, 'Y71H2AM.5': 2.6666666666666665, 'F11C3.3': 5.0}, options={'direction': 'both'}),\n",
+       " CentralityAlgorithmOutput(name='betweenness_centrality', result={'C26G2.1': 0.0, 'F11C3.3': 0.0, 'F23F1.8': 0.0, 'T22D1.9': 0.029411764705882353, 'K12F2.1': 0.0, 'F29G9.5': 0.07352941176470588, 'Y17G7B.10': 0.01838235294117647, 'ZK20.3': 0.0, 'F56G4.5': 0.0, 'C41C4.8': 0.0, 'F43D9.4': 0.0, 'H18N23.2': 0.0, 'C06A1.1': 0.014705882352941176, 'F58G4.1': 0.003676470588235294, 'R06C7.10': 0.0, 'T18D3.4': 0.003676470588235294, 'T20F5.2': 0.0, 'Y71H2AM.5': 0.0}, options={'direction': 'both'})]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
