--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -238,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Configurations"
+    "##### Global variables"
    ]
   },
   {
@@ -261,6 +261,9 @@
    ],
    "source": [
     "# list of all the algorithms\n",
+    "from tabnanny import verbose\n",
+    "\n",
+    "\n",
     "algorithms_to_run = [\n",
     "    CentralityAlgorithm(\"degree_centrality\", nx.degree_centrality, {}, {\"direction\":\"both\"}), \n",
     "    CentralityAlgorithm(\"in_degree_centrality\", nx.in_degree_centrality, {}, {\"direction\":\"directed\"}), \n",
@@ -276,6 +279,8 @@
     "\n",
     "# total sample size\n",
     "sample_size = 25\n",
+    "verbose = False\n",
+    "plot = False\n",
     "\n",
     "# config. dir for input graph\n",
     "parent_dir = abspath(join(join(getcwd(), pardir), pardir))\n",
@@ -284,7 +289,7 @@
     "# data_file = join(data_dir, 'DM-HT_small.txt')\n",
     "\n",
     "graph = nx.read_edgelist(data_file, nodetype=str, data=((\"weight\", float),))\n",
-    "graph = sample_graph(graph=graph, sample_size=sample_size, verbose=True, plot=False)\n",
+    "graph = sample_graph(graph=graph, sample_size=sample_size, verbose=verbose, plot=plot)\n",
     "di_graph = undirected_to_directed(graph)\n",
     "\n",
     "print(f\"{graph}\")"
