--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -243,22 +243,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ log ]: Downsampling a larger graph\n",
-      "[ log ]: Node: 'K12F2.1' yields '1' ego-graph nodes after radius '0'\n",
-      "[ log ]: Node: 'K12F2.1' yields '3' ego-graph nodes after radius '1'\n",
-      "[ log ]: Node: 'K12F2.1' yields '11' ego-graph nodes after radius '2'\n",
-      "[ log ]: Node: 'K12F2.1' yields '18' ego-graph nodes after radius '3'\n",
-      "Graph with 18 nodes and 23 edges\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# list of all the algorithms\n",
     "algorithms_to_run = [\n",
@@ -291,6 +278,20 @@
     "\n",
     "print(f\"{graph}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Widget Components"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
