--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -283,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Widget Components"
+    "##### Interactive widget component(s)"
    ]
   },
   {
