--- a/src/lab1/src/test/test_dash.ipynb
+++ b/src/lab1/src/test/test_dash.ipynb
@@ -22,6 +22,9 @@
     "from ipywidgets import interact, interactive, fixed, interact_manual, Dropdown, Text, GridBox, VBox, HBox, Accordion, BoundedIntText, Checkbox, Layout, IntProgress, Tab, Image, Button\n",
     "from IPython.display import display, Javascript\n",
     "\n",
+    "from dash import Dash, dcc, html, Input, Output\n",
+    "import plotly.express as px\n",
+    "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\""
    ]
